# pico_fmt

./: .editorconfig  CMakeLists.txt  GNUmakefile  LICENSE.txt  README.md
.github/workflows/: qa.yml
cmake/: apply_matrix.cmake  pico_sdk_functions.cmake
pico_fmt/: CMakeLists.txt  convenience.c  printf.c
pico_fmt/include/pico/: fmt_install.h  fmt_printf.h
pico_fmt/test/: test_compile.c  test_suite.c  test_suite.cpp
pico_printf/: CMakeLists.txt  printf_pico.c
pico_printf/include/pico/: printf.h
